--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-python==3.10.11
-kivy==2.2.1
-kivymd==1.1.1
 cryptography==41.0.4
-Pillow==10.1.0
-androidstorage4kivy==0.1.0
-pyinstaller==5.6.2
+flet==0.28.3
