--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,16 @@
 [project]
-name = "kitpass"
+name = "KitPass"
 version = "0.1.0"
-description = ""
+description = "KitPass is a 100% open-source password manager designed to ensure the security and privacy of your data. All passwords are stored locally on your device, and the app operates entirely offline for complete peace of mind."
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = "==3.12"
 authors = [
-    { name = "Flet developer", email = "you@example.com" }
+    { name = "Edoardo Nasuto", email = "edoardo.nasuto@gmail.com" }
 ]
 dependencies = [
-  "flet==0.28.3"
+  "flet==0.28.3",
+  "fletxr==0.1.4.dev1",
+  "cryptography==41.0.4",
 ]
 
 [tool.flet]
@@ -18,16 +20,16 @@ org = "com.mycompany"
 
 # project display name that is used as an app title on Android and iOS home screens,
 # shown in window titles and about app dialogs on desktop.
-product = "kitpass"
+product = "KitPass"
 
 # company name to display in about app dialogs
-company = "Flet"
+company = "KitPass"
 
 # copyright text to display in about app dialogs
-copyright = "Copyright (C) 2025 by Flet"
+copyright = "Copyright (C) 2025 by Edoardo Nasuto"
 
 [tool.flet.app]
-path = "src"
+path = ""
 
 [tool.uv]
 dev-dependencies = [
